kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kinootziv-app
  name: kinootziv-svc
spec:
  selector:
    app: kinootziv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
