kubernetes/ingeres-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: kinootziv-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  rules:
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /adminer(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adminer-svc
            port:
              number: 8080

  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kinootziv-svc
            port:
              number: 8000
  
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /mlflow(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-svc
            port:
              number: 5000

  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /minio(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-svc
            port:
              number: 9001
  
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /minioapi(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-svc
            port:
              number: 9000
  
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
  
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /prometheus(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
