kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-all
  namespace: kinootziv-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - fklska.asuscomm.com
    secretName: tls-secret
  rules:
  - host: fklska.asuscomm.com
    http:
      paths:
      - path: /minioapi/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-svc
            port:
              number: 9000
      - path: /minio/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio-svc
            port:
              number: 9001
      
      - path: /mlflow/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow-svc
            port:
              number: 5000
      
      - path: /adminer/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adminer-svc
            port:
              number: 8080
      
      - path: /backend/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kinootziv-svc
            port:
              number: 8000
      
      - path: /prometheus/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090

      - path: /grafana/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
